--- a/src/components/infopages/Faq.astro
+++ b/src/components/infopages/Faq.astro
@@ -12,7 +12,40 @@
         </p>
       </div>
       <div class="mt-12 space-y-12 divide-y-2">
-        <div class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:pt-12">
+        <div
+          class="grid grid-cols-1 gap-4 pt-4 lg:grid-cols-3 lg:gap-6 lg:pt-12">
+          <!-- ... -->
+          <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
+            <span
+              class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
+              What is Trak?
+            </span>
+          </div>
+          <div class="lg:col-span-2">
+            <p class="text-gray-500 text-sm">
+              Trak is a tool that helps you track the time you spend on your
+              activities. At the moment is released in the form of a command
+              line interface (CLI).
+            </p>
+          </div>
+          <!-- ... -->
+          <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
+            <span
+              class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
+              Who is behind Trak?
+            </span>
+          </div>
+          <div class="lg:col-span-2">
+            <p class="text-gray-500 text-sm">
+              At the moment only me, <a
+                class="underline"
+                href="https://lucafedrizzi.com/">Luca</a
+              >. I'm a freelance web developer, I create full-stack web products
+              for my customers. I also help them with decision making and manage
+              problems.
+            </p>
+          </div>
+          <!-- ... -->
           <div class="flex flex-col flex-shrink-0 mb-6 lg:pr-12 md:mb-0">
             <span
               class="text-lg font-semibold leading-6 text-black font-display tracking-tight">
@@ -21,7 +54,7 @@
           </div>
           <div class="lg:col-span-2">
             <p class="text-gray-500 text-sm">
-              Yes. The CLI part will always remain under an approved open-source
+              <b>Yes.</b> The CLI part will always remain under an approved open-source
               license.
             </p>
           </div>
