--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -10,26 +10,26 @@ import { AstroSeo } from "@astrolib/seo";
 Use AstroSeo in all the pages you want different Seo than the index page
 -->
 <AstroSeo
-  title="Terms"
-  description="Keep a record of the time you dedicate to your projects"
-  canonical="http://usetrak.com"
+  title="Terms and conditions"
+  description="Terms and conditions for Trak."
+  canonical="http://usetrak.com/terms"
   openGraph={{
     url: "http://usetrak.com",
-    title: "Open Graph Title",
-    description: "Open Graph Description",
+    title: "Terms and conditions",
+    description: "Terms and conditions for Trak.",
     images: [
       {
         url: "http://usetrak.com/opengraph/social-og.jpeg",
         width: 1200,
         height: 630,
-        alt: "Social open graph",
+        alt: "Trak",
         type: "image/jpeg",
       },
       {
         url: "http://usetrak.com/opengraph/twitter-og.jpeg",
         width: 4096,
         height: 4096,
-        alt: "Twitter open graph",
+        alt: "Trak",
         type: "image/jpeg",
       },
       { url: "http://usetrak.com/opengraph/social-og.jpeg" },
