--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -27,6 +27,31 @@
               <ion-icon
                 aria-label="scan outline"
                 class="hydrated md h-5 w-5"
+                name="beer-outline"
+                role="img"></ion-icon>
+            </div>
+            <p
+              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
+              Brew
+            </p>
+          </div>
+          <p class="text-gray-500 text-sm mt-4">
+            <span class="block mb-4">
+              The currently recommended way to use it on your computer. <br /> You
+              need to have Homebrew installed.
+            </span>
+            <span class="block">
+              <code>brew install tap lcfd/trak/trak</code>
+            </span>
+          </p>
+        </div>
+        <div>
+          <div class="gap-3 lg:inline-flex lg:items-center">
+            <div
+              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
+              <ion-icon
+                aria-label="scan outline"
+                class="hydrated md h-5 w-5"
                 name="star-outline"
                 role="img"></ion-icon>
             </div>
@@ -36,9 +61,7 @@
             </p>
           </div>
           <p class="text-gray-500 text-sm mt-4">
-            <span class="block mb-4">
-              The currently recommended way to use it on your computer.
-            </span>
+            <span class="block mb-4">Global installation for Pythonistas.</span>
             <code> pipx install trakcli</code>
           </p>
         </div><div>
@@ -82,34 +105,7 @@
             <span class="block mb-4">
               If you have Nix installed and flakes enabled.
             </span>
-            <code> nix run github:lcfd/trak</code>
-          </p>
-        </div>
-        <div>
-          <div class="gap-3 lg:inline-flex lg:items-center">
-            <div
-              class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-              <ion-icon
-                aria-label="scan outline"
-                class="hydrated md h-5 w-5"
-                name="beer-outline"
-                role="img"></ion-icon>
-            </div>
-            <p
-              class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
-              Brew
-            </p>
-          </div>
-          <p class="text-gray-500 text-sm mt-4">
-            <span class="block mb-4"> TBA</span>
-            <span class="block">
-              <a
-                class="underline"
-                target="_blank"
-                href="https://github.com/lcfd/trak/issues/14">
-                Contributions are welcome! 🙏
-              </a>
-            </span>
+            <code>nix run github:lcfd/trak</code>
           </p>
         </div>
       </div>
@@ -198,8 +194,10 @@
     <div class="mx-auto max-w-3xl lg:text-center relative">
       <div>
         <p class="mt-12 text-lg max-w-xl tracking-tight text-gray-500 mx-auto">
-          For more details give a look at the <a class="font-bold underline"
-            href="https://docs.usetrak.com/guides/quick-start/" target="_blank">Quick Start ↪</a
+          For more details give a look at the <a
+            class="font-bold underline"
+            href="https://docs.usetrak.com/guides/quick-start/"
+            target="_blank">Quick Start ↪</a
           > guide.
         </p>
       </div>
